Minimized the imported resources and translate the header values

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Homepage</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <link href="main.css" rel="stylesheet">
 </head>
@@ -17,9 +17,9 @@
         <div>
             <h3 class="float-md-start mb-0">CyberSoft Notification</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a aria-current="page" class="nav-link active" href="#">Home</a>
-                <a class="nav-link" href="register-admin.html">Admin Subscribe</a>
-                <a class="nav-link" href="register-user.html">User Subscribe</a>
+                <a aria-current="page" class="nav-link active" href="#">首頁</a>
+                <a class="nav-link" href="register-admin.html">管理者訂閱</a>
+                <a class="nav-link" href="register-user.html">使用者訂閱</a>
             </nav>
         </div>
     </header>
