--- a/register-admin.html
+++ b/register-admin.html
@@ -5,10 +5,8 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Registry admin</title>
 
-    <!--    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/checkout/">-->
-
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
 
     <style>
@@ -48,9 +46,9 @@
         <div class="container-fluid">
             <h3 class="float-md-start mb-0 navbar-brand text-white">CyberSoft Notification</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link" href="index.html">Home</a>
-                <a aria-current="page" class="nav-link active" href="#">Admin Subscribe</a>
-                <a class="nav-link" href="register-user.html">User Subscribe</a>
+                <a class="nav-link" href="index.html">首頁</a>
+                <a aria-current="page" class="nav-link active" href="#">管理者訂閱</a>
+                <a class="nav-link" href="register-user.html">使用者訂閱</a>
             </nav>
         </div>
     </header>
@@ -82,32 +80,7 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <!--<tr>
-                                    <td>
-                                        <input class="form-control" required type="text">
-                                        <div class="invalid-feedback">
-                                            Name is required.
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <input class="form-control" required type="email">
-                                        <div class="invalid-feedback">
-                                            Please provide a valid email.
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <button class="btn btn-primary" data-bs-target="#staticBackdrop"
-                                                data-bs-toggle="modal"
-                                                type="button">
-                                            <i class="bi bi-card-checklist">事件</i>
-                                        </button>
-                                    </td>
-                                    <td>
-                                        <button class="btn btn-danger" type="button">
-                                            <i class="bi bi-trash">刪除</i>
-                                        </button>
-                                    </td>
-                                </tr>-->
+
                                 </tbody>
                                 <tfoot>
                                 <tr>
@@ -144,26 +117,7 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <!--<tr>
-                                    <td>
-                                        <input class="form-control" required type="text">
-                                    </td>
-                                    <td>
-                                        <input class="form-control" required type="url">
-                                    </td>
-                                    <td>
-                                        <button class="btn btn-primary" data-bs-target="#staticBackdrop"
-                                                data-bs-toggle="modal"
-                                                type="button">
-                                            <i class="bi bi-card-checklist">事件</i>
-                                        </button>
-                                    </td>
-                                    <td>
-                                        <button class="btn btn-danger" type="button">
-                                            <i class="bi bi-trash">刪除</i>
-                                        </button>
-                                    </td>
-                                </tr>-->
+
                                 </tbody>
                                 <tfoot>
                                 <tr>
@@ -196,26 +150,7 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <!--<tr>
-                                    <td>
-                                        <input class="form-control" required type="text">
-                                    </td>
-                                    <td>
-                                        <input class="form-control" required type="url">
-                                    </td>
-                                    <td>
-                                        <button class="btn btn-primary" data-bs-target="#staticBackdrop"
-                                                data-bs-toggle="modal"
-                                                type="button">
-                                            <i class="bi bi-card-checklist">事件</i>
-                                        </button>
-                                    </td>
-                                    <td>
-                                        <button class="btn btn-danger" type="button">
-                                            <i class="bi bi-trash">刪除</i>
-                                        </button>
-                                    </td>
-                                </tr>-->
+
                                 </tbody>
                                 <tfoot>
                                 <tr>
@@ -251,58 +186,59 @@
 </div>
 
 
-<script src="js/bootstrap.bundle.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 
 <script src="form-validation.js"></script>
 
 <script>
-    'use strict';
+  'use strict';
 
-    let globalCount = 0;
+  let globalCount = 0;
 
-    (function () {
-        const tables = [...document.getElementsByTagName('table')];
-        tables.forEach(table => {
-            // Delete a row
-            table.addEventListener('click', function (ev) {
-                if (!ev.target) {
-                    return;
-                }
+  (function () {
+    const tables = [...document.getElementsByTagName('table')];
+    tables.forEach(table => {
+      // Delete a row
+      table.addEventListener('click', function (ev) {
+        if (!ev.target) {
+          return;
+        }
 
-                if (ev.target.nodeName === 'BUTTON' && ev.target.firstElementChild && ev.target.firstElementChild.matches('i.bi.bi-trash')) {
-                    const row = ev.target.parentNode.parentNode;
-                    row.parentNode.removeChild(row);
-                } else if (ev.target.matches('button > i.bi.bi-trash')) {
-                    const row = ev.target.parentNode.parentNode.parentNode;
-                    row.parentNode.removeChild(row);
-                }
-            });
+        if (ev.target.nodeName === 'BUTTON' && ev.target.firstElementChild && ev.target.firstElementChild.matches('i.bi.bi-trash')) {
+          const row = ev.target.parentNode.parentNode;
+          row.parentNode.removeChild(row);
+        } else if (ev.target.matches('button > i.bi.bi-trash')) {
+          const row = ev.target.parentNode.parentNode.parentNode;
+          row.parentNode.removeChild(row);
+        }
+      });
 
-            const buttons = table.querySelectorAll('tfoot button');
-            const btnAdd = buttons.length === 1 ? buttons[0] : buttons.find(btn => btn.firstElementChild.matches('i.bi.bi-plus'));
+      const buttons = table.querySelectorAll('tfoot button');
+      const btnAdd = buttons.length === 1 ? buttons[0] : buttons.find(btn => btn.firstElementChild.matches('i.bi.bi-plus'));
 
-            // Add a row
-            btnAdd.addEventListener('click', function () {
-                let type;
-                if (table.id === 'sharedEmailTable') {
-                    type = 'email';
-                } else {
-                    type = 'url';
-                }
+      // Add a row
+      btnAdd.addEventListener('click', function () {
+        let type;
+        if (table.id === 'sharedEmailTable') {
+          type = 'email';
+        } else {
+          type = 'url';
+        }
 
-                const row = table.getElementsByTagName('tbody')[0].insertRow();
-                row.innerHTML = rowTemplate('event' + globalCount.toString(10), '', type);
-                globalCount++;
-            });
-        });
-        const tooltipTriggerList = [...document.querySelectorAll('[data-bs-toggle="tooltip"]')];
-        const tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-            return new bootstrap.Tooltip(tooltipTriggerEl);
-        });
-    })();
+        const row = table.getElementsByTagName('tbody')[0].insertRow();
+        row.innerHTML = rowTemplate('event' + globalCount.toString(10), '', type);
+        globalCount++;
+      });
+    });
+    const tooltipTriggerList = [...document.querySelectorAll('[data-bs-toggle="tooltip"]')];
+    // noinspection JSUnusedLocalSymbols
+    const tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+      return new bootstrap.Tooltip(tooltipTriggerEl);
+    });
+  })();
 
-    function rowTemplate(eventListId, defaultName = '', inputType = 'text') {
-        return `
+  function rowTemplate(eventListId, defaultName = '', inputType = 'text') {
+    return `
         <td>
             <input class="form-control" required type="text" value="${defaultName}">
             <div class="invalid-feedback">
@@ -326,10 +262,10 @@
                 <i class="bi bi-trash"></i>
             </button>
         </td>`;
-    }
+  }
 
-    function eventTemplate(id) {
-        return `
+  function eventTemplate(id) {
+    return `
         <div aria-hidden="true" class="modal fade" data-bs-backdrop="static"
              id="${id}" tabIndex="-1">
             <div class="modal-dialog modal-dialog-scrollable">
@@ -474,7 +410,7 @@
                 </div>
             </div>
         </div>`;
-    }
+  }
 </script>
 </body>
 </html>
