--- a/register-user.html
+++ b/register-user.html
@@ -5,10 +5,8 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Registry user</title>
 
-    <!--    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/checkout/">-->
-
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
 
     <style>
@@ -47,9 +45,9 @@
         <div class="container-fluid">
             <h3 class="float-md-start mb-0 navbar-brand text-white">CyberSoft Notification</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link" href="index.html">Home</a>
-                <a aria-current="page" class="nav-link" href="register-admin.html">Admin Subscribe</a>
-                <a class="nav-link active" href="#">User Subscribe</a>
+                <a class="nav-link" href="index.html">首頁</a>
+                <a aria-current="page" class="nav-link" href="register-admin.html">管理者訂閱</a>
+                <a class="nav-link active" href="#">使用者訂閱</a>
             </nav>
         </div>
     </header>
@@ -79,32 +77,7 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <!--<tr>
-                                    <td>
-                                        <input class="form-control" required type="text">
-                                        <div class="invalid-feedback">
-                                            Name is required.
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <input class="form-control" required type="email">
-                                        <div class="invalid-feedback">
-                                            Please provide a valid email.
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <button class="btn btn-primary" data-bs-target="#staticBackdrop"
-                                                data-bs-toggle="modal"
-                                                type="button">
-                                            <i class="bi bi-card-checklist">事件</i>
-                                        </button>
-                                    </td>
-                                    <td>
-                                        <button class="btn btn-danger" type="button">
-                                            <i class="bi bi-trash">刪除</i>
-                                        </button>
-                                    </td>
-                                </tr>-->
+
                                 </tbody>
                                 <tfoot>
                                 <tr>
@@ -131,32 +104,7 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <!--<tr>
-                                    <td>
-                                        <input class="form-control" required type="text">
-                                        <div class="invalid-feedback">
-                                            Name is required.
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <input class="form-control" required type="email">
-                                        <div class="invalid-feedback">
-                                            Please provide a valid email.
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <button class="btn btn-primary" data-bs-target="#staticBackdrop"
-                                                data-bs-toggle="modal"
-                                                type="button">
-                                            <i class="bi bi-card-checklist">事件</i>
-                                        </button>
-                                    </td>
-                                    <td>
-                                        <button class="btn btn-danger" type="button">
-                                            <i class="bi bi-trash">刪除</i>
-                                        </button>
-                                    </td>
-                                </tr>-->
+
                                 </tbody>
                                 <tfoot>
                                 <tr>
@@ -237,79 +185,79 @@
 </div>
 
 
-<script src="js/bootstrap.bundle.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 
 <script src="form-validation.js"></script>
 
 <script>
-    'use strict';
+  'use strict';
 
-    let globalCount = 0;
+  let globalCount = 0;
 
-    (function () {
-        const tables = [...document.getElementsByTagName('table')];
-        tables.forEach(table => {
-            // Delete a row
-            table.addEventListener('click', function (ev) {
-                if (!ev.target) {
-                    return;
-                }
+  (function () {
+    const tables = [...document.getElementsByTagName('table')];
+    tables.forEach(table => {
+      // Delete a row
+      table.addEventListener('click', function (ev) {
+        if (!ev.target) {
+          return;
+        }
 
-                if (ev.target.nodeName === 'BUTTON' && ev.target.firstElementChild && ev.target.firstElementChild.matches('i.bi.bi-trash')) {
-                    const row = ev.target.parentNode.parentNode;
-                    row.parentNode.removeChild(row);
-                } else if (ev.target.matches('button > i.bi.bi-trash')) {
-                    const row = ev.target.parentNode.parentNode.parentNode;
-                    row.parentNode.removeChild(row);
-                }
-            });
+        if (ev.target.nodeName === 'BUTTON' && ev.target.firstElementChild && ev.target.firstElementChild.matches('i.bi.bi-trash')) {
+          const row = ev.target.parentNode.parentNode;
+          row.parentNode.removeChild(row);
+        } else if (ev.target.matches('button > i.bi.bi-trash')) {
+          const row = ev.target.parentNode.parentNode.parentNode;
+          row.parentNode.removeChild(row);
+        }
+      });
 
-            const buttons = table.querySelectorAll('tfoot button');
-            const btnAdd = buttons.length === 1 ? buttons[0] : buttons.find(btn => btn.firstElementChild.matches('i.bi.bi-plus'));
+      const buttons = table.querySelectorAll('tfoot button');
+      const btnAdd = buttons.length === 1 ? buttons[0] : buttons.find(btn => btn.firstElementChild.matches('i.bi.bi-plus'));
 
-            // Add a row
-            btnAdd.addEventListener('click', function () {
-                let columnTag, inputType;
-                switch (table.id) {
-                    case 'emailTable':
-                        columnTag = 'input';
-                        inputType = 'email';
-                        break;
-                    case 'smsTable':
-                        columnTag = 'input';
-                        inputType = 'tel';
-                        break;
-                    case 'lineTable':
-                        columnTag = 'p';
-                        inputType = '';
-                        break;
-                    default:
-                        inputType = 'text';
-                }
+      // Add a row
+      btnAdd.addEventListener('click', function () {
+        let columnTag, inputType;
+        switch (table.id) {
+          case 'emailTable':
+            columnTag = 'input';
+            inputType = 'email';
+            break;
+          case 'smsTable':
+            columnTag = 'input';
+            inputType = 'tel';
+            break;
+          case 'lineTable':
+            columnTag = 'p';
+            inputType = '';
+            break;
+          default:
+            inputType = 'text';
+        }
 
-                const row = table.getElementsByTagName('tbody')[0].insertRow();
-                row.innerHTML = rowTemplate('event' + globalCount.toString(10), '', columnTag, inputType);
-                globalCount++;
-            });
-        });
-    })();
+        const row = table.getElementsByTagName('tbody')[0].insertRow();
+        row.innerHTML = rowTemplate('event' + globalCount.toString(10), '', columnTag, inputType);
+        globalCount++;
+      });
+    });
+  })();
 
-    function columnTemplate(tag, arg = 'text') {
-        if (tag === 'input') {
-            return `
+  function columnTemplate(tag, arg = 'text') {
+    if (tag === 'input') {
+      return `
             <input class="form-control" required type="${arg}">
             <div class="invalid-feedback">
                 Please provide a valid ${arg}.
             </div>`;
-        }
-        return `
+    }
+    return `
         <p>
             ${Math.floor(Math.random() * Number.MAX_SAFE_INTEGER)}
         </p>`;
-    }
+  }
 
-    function rowTemplate(eventListId, defaultName = '', columnTag = 'input', inputType = 'text') {
-        return `
+  function rowTemplate(eventListId, defaultName = '', columnTag = 'input', inputType = 'text') {
+    return `
         <td>
             <input class="form-control" required type="text" value="${defaultName}">
             <div class="invalid-feedback">
@@ -330,10 +278,10 @@
                 <i class="bi bi-trash"></i>
             </button>
         </td>`;
-    }
+  }
 
-    function eventTemplate(id) {
-        return `
+  function eventTemplate(id) {
+    return `
         <div aria-hidden="true" class="modal fade" data-bs-backdrop="static"
              id="${id}" tabIndex="-1">
             <div class="modal-dialog modal-dialog-scrollable">
@@ -478,7 +426,7 @@
                 </div>
             </div>
         </div>`;
-    }
+  }
 </script>
 </body>
 </html>
