--- a/register-admin.html
+++ b/register-admin.html
@@ -194,6 +194,7 @@
   'use strict';
 
   let globalCount = 0;
+  const bodyElement = document.getElementsByTagName('body')[0];
 
   (function () {
     const tables = [...document.getElementsByTagName('table')];
@@ -204,14 +205,24 @@
           return;
         }
 
+        let tRow;
         if (ev.target.nodeName === 'BUTTON' && ev.target.firstElementChild && ev.target.firstElementChild.matches('i.bi.bi-trash')) {
-          const row = ev.target.parentNode.parentNode;
-          row.parentNode.removeChild(row);
+          tRow = ev.target.parentNode.parentNode;
         } else if (ev.target.matches('button > i.bi.bi-trash')) {
-          const row = ev.target.parentNode.parentNode.parentNode;
-          row.parentNode.removeChild(row);
+          tRow = ev.target.parentNode.parentNode.parentNode;
         }
+
+        if (tRow === undefined) {
+          return;
+        }
+
+        const eventsBtn = tRow.getElementsByClassName('btn btn-primary')[0];
+        const modalId = eventsBtn.getAttribute('data-bs-target').substring(1);
+        const modal = document.getElementById(modalId);
+        bodyElement.removeChild(modal);
+        tRow.parentNode.removeChild(tRow);
       });
+
 
       const buttons = table.querySelectorAll('tfoot button');
       const btnAdd = buttons.length === 1 ? buttons[0] : buttons.find(btn => btn.firstElementChild.matches('i.bi.bi-plus'));
@@ -225,8 +236,14 @@
           type = 'url';
         }
 
+        const rowId = 'event' + globalCount.toString(10);
         const row = table.getElementsByTagName('tbody')[0].insertRow();
-        row.innerHTML = rowTemplate('event' + globalCount.toString(10), '', type);
+        row.innerHTML = rowTemplate(rowId, '', type);
+
+        const modalDiv = document.createElement('template');
+        modalDiv.innerHTML = eventTemplate(rowId);
+        bodyElement.appendChild(modalDiv.content.firstChild);
+
         globalCount++;
       });
     });
@@ -238,8 +255,7 @@
   })();
 
   function rowTemplate(eventListId, defaultName = '', inputType = 'text') {
-    return `
-        <td>
+    return `<td>
             <input class="form-control" required type="text" value="${defaultName}">
             <div class="invalid-feedback">
                 Name is required.
@@ -255,7 +271,6 @@
             <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#${eventListId}">
                 <i class="bi bi-card-checklist"></i>
             </button>
-            ${eventTemplate(eventListId)}
         </td>
         <td>
             <button class="btn btn-danger" type="button">
@@ -265,8 +280,7 @@
   }
 
   function eventTemplate(id) {
-    return `
-        <div aria-hidden="true" class="modal fade" data-bs-backdrop="static"
+    return `<div aria-hidden="true" class="modal fade" data-bs-backdrop="static"
              id="${id}" tabIndex="-1">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
