--- a/register-admin.html
+++ b/register-admin.html
@@ -44,7 +44,7 @@
 
     <header class="navbar navbar-light fixed-top bg-dark">
         <div class="container-fluid">
-            <h3 class="float-md-start mb-0 navbar-brand text-white">CyberSoft Notification</h3>
+            <h3 class="float-md-start mb-0 navbar-brand text-white">CyberMARS eNotification</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link" href="index.html">首頁</a>
                 <a aria-current="page" class="nav-link active" href="#">管理者訂閱</a>
